@@ -79,7 +79,7 @@ distclean: clean
 ifeq ($(EMULATION),)
 build/gnuk-vidpid.elf: build/gnuk.elf binary-edit.sh put-vid-pid-ver.sh
 	cp -p build/gnuk.elf build/gnuk-vidpid.elf
-	bash put-vid-pid-ver.sh
+	env FILE="build/gnuk-vidpid.elf" bash put-vid-pid-ver.sh
 	$(OBJCOPY) -O ihex build/gnuk-vidpid.elf build/gnuk-vidpid.hex
 	$(OBJCOPY) -O binary build/gnuk-vidpid.elf build/gnuk-vidpid.bin
 else
